# projects

./: aps1070_project_1_knn_decision_tree.ipynb  aps1070_project_2_gaussian_mixture_model.ipynb  aps1070_project_4_linear_regression_gradient_descent.ipynb  compensation_classification_via_multiclass_ordinal_logistic_regression.ipynb  curriculum_design_via_hierarchical_kmeans_dbscan_clustering.ipynb
big_data/: some.text
machine_learning_case_studies_in_finance/: bitcoin_trading_strategy_pca_logistic_regression.ipynb
machine_learning_case_studies_in_finance/bitcoin_trading_strategy_nlp_llm/: bitcoin_trading_strategy_llm_sentiment_classification.ipynb  bitcoin_trading_strategy_nlp_old_method.ipynb  llm_deberta.ipynb  llm_gpt2.ipynb  llm_llama3.ipynb  llm_roberta.ipynb  llm_t5.ipynb
machine_learning_case_studies_in_finance/bitcoin_trading_strategy_nlp_llm/data/: Step4_DataWithSentimentsResults_roberta.csv
modeling_and_optimization_of_chemical_and_biochemical_networks/in_class_illustration/: Fundsub.m  MichMen_Main.m  mmeqns.m  mmeqnsQEA.m  mmeqnsQSSA.m
modeling_and_optimization_of_chemical_and_biochemical_networks/production_assessment_of_synthetic_carbon_fixation_pathway_integration_in_e_coli/: che1125_project.ipynb
modelling_in_biology_and_chemical_systems/benzene_oxidation_equilibrium_modeling/code/: Q1model.m  fit_all.m  modelA.m  modelB.m  modelC.m  modelD.m
modelling_in_biology_and_chemical_systems/benzene_oxidation_equilibrium_modeling/img/: a.tif  b.tif  c.tif  d.tif
rust_data_science/: Cargo.toml
rust_data_science/src/: lib.rs
(+9 files in other folders)
