[package]
name = "rust_ds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray-csv = "0.5.2"
# darn = "0.3.4"
# ureq = "2.9.4"
csv = "1.3.0"
polars = { version = "0.37.0", features = ["lazy"] }
polars-core = {version = "0.37.0", features=["ndarray"]}
arrow = "4.3.0"
rand = "0.8.5"
num-integer = "0.1.46"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
ndarray = { version = "0.15.6", features = ["serde"] }
tch = "0.16.0"
anyhow = "1.0.82"

[[bin]]
name = "b1"
path = "src/bin/tch_rs_test.rs"

[[bin]]
name = "b2"
path = "src/bin/neural_net_2.rs"

[[bin]]
name = "b3"
path = "src/bin/neural_net_3.rs"

# [env]
# LIBTORCH = { value = "torch" , relative = true }
# DYLD_LIBRARY_PATH = { value = "torch/lib" , relative = true }
# LIBTORCH = { value = "/Users/barrychen/Desktop/rust_data_science/src/bin/torch" , relative = true }
# DYLD_LIBRARY_PATH = { value = "/Users/barrychen/Desktop/rust_data_science/src/bin/torch/lib" , relative = true }
